<resources>
    <string name="app_name">Oonbux</string>
    <string name="splash_btn_text">Check Us Out</string>
    <string name="terms">By creating an account, you agree to Oonbux\'s terms &amp; Conditions.\n Privacy Policy and Content Policies</string>
    <string name="terms1">By Signin, you agree to Oonbux\'s terms &amp; Conditions.\n Privacy Policy and Content Policies</string>
    <string name="splash_terms">Shop online and ship your package to your oonbux virtual packages address and we make sure it gets to you at you at your own time</string>
    <string name="title_activity_maps">Map</string>

    <string name="txt_1">Send An Oonbux mobile Virtual Address Account Setup Request To Your Pal Abroad</string>
    <string name="txt_2"><![CDATA[Take a picture of waht You want to Ship & weight it]]></string>
    <string name="txt_3">Select An oonbux Delivery Virtual Address</string>
    <string name="txt_4">Request for a pictup/payment \n We Take it from there</string>

    <string name="txt_1_1">Take a picture of What you want to ship/Weight it</string>
    <string name="txt_1_2">Select the country of your destination</string>
    <string name="txt_1_3">Request for a pickup/payment</string>
    <string name="txt_1_4">We Take it from there</string>


    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>


</resources>
