<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f324ad"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@drawable/camera" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"

                    android:gravity="center"
                    android:text=" 1."
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center"
                    android:text="@string/txt_1"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageViedw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/des" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text=" 2."
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_2"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imagdfeVaiew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/loc_wt_ico" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"

                    android:gravity="center"
                    android:text=" 3."
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_3"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imagesdfView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/per" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"

                    android:gravity="center"
                    android:text=" 4."
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_4_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_4"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

            </LinearLayout>


            <com.rey.material.widget.Button
                android:id="@+id/add_sp_btn"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/backo"
                android:drawableLeft="@drawable/ship"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="Add Shipment"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>