<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical">

        <com.rey.material.widget.TextView
            android:id="@+id/htext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=" What to Ship &amp; Where?"
            android:textColor="#ffffff"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="@dimen/_130sdp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/colorAccent" />


        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_23sdp"
            android:layout_marginRight="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/backo"
            android:padding="1dp">


            <com.rey.material.widget.Button
                android:id="@+id/tbtn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ship_ico"
                android:padding="@dimen/_8sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:text="Ship your Luggage"
                android:textColor="#af7735"
                android:textSize="@dimen/_9sdp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#9b550f" />

            <com.rey.material.widget.Button
                android:id="@+id/tbtn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/pack_ico"
                android:padding="@dimen/_8sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:text="Send your packages to pal"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_9sdp" />-->


        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginBottom="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/nav_header_propic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_13sdp"
                android:src="@drawable/camera" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:gravity="center"
                    android:text=" 1."
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_1_1"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageViedw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/des" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:gravity="center"
                    android:text=" 2."
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_1_2"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imgview_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/doller"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_4sdp"

                    android:gravity="center"
                    android:text=" 3."
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_1_3"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imagesdfView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/per" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:gravity="center"
                    android:text=" 4."
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

                <com.rey.material.widget.TextView
                    android:id="@+id/txt_4_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_1_4"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>